--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -32,10 +32,8 @@
 <dependency>
     <groupId>com.h2database</groupId>
     <artifactId>h2</artifactId>
-    <version>1.4.199</version>
-    <scope>test</scope>
+    <scope>runtime</scope>
 </dependency>
-
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
