--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ server.ssl.key-store-password=qwerty
 server.ssl.keyStoreType=JKS
 server.ssl.keyAlias=mydomain
 local.server.port=8443
+
+spring.datasource.url=jdbc:postgresql://localhost/testing_db
+spring.datasource.username=postgres
+spring.datasource.password=
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.show-sql = true
+
+spring.datasource.removeAbandoned=true
