--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: java
 jdk:
  - oraclejdk8
- addons:
+addons:
   postgresql: "9.4"
-  sudo: required
-  services: 
-    -postgresql
-    
+sudo: required
+services:
+  - postgresql
+
+
 before_install:
- - chmod +x mvnw
- - psql -c "Create DATABASE testing_db" -U postgres
+  - chmod +x mvnw
+- psql -c "CREATE DATABASE testing_db;" -U postgres
